--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ html, body{
 }
 
 .welcome {
-  background-color: #81B29A;
+  background-color: #ff6d24;
   color:white;
   height: 70px;
   font-size: 40px;
@@ -61,6 +61,7 @@ html, body{
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   font-size:20px;
+  color: #4e413b
 }
 
 hr.divider {
@@ -121,7 +122,7 @@ hr.divider {
   box-sizing: border-box;
 }
 
-h1 {
+h3 {
   text-align: center;
   color: green;
   text-shadow: 1px 1px 0 white;
