--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body{
   margin: 0;
   background: #FAF9F0;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 .sidenav {
@@ -44,7 +45,7 @@ html, body{
 }
 
 .welcome {
-  background-color: #ff6d24;
+  background-color: #81B29A;
   color:white;
   height: 70px;
   font-size: 40px;
@@ -61,7 +62,6 @@ html, body{
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   font-size:20px;
-  color: #4e413b
 }
 
 hr.divider {
@@ -122,7 +122,7 @@ hr.divider {
   box-sizing: border-box;
 }
 
-h3 {
+h1 {
   text-align: center;
   color: green;
   text-shadow: 1px 1px 0 white;
@@ -238,7 +238,7 @@ hr { border-top: 1px solid #e4e7e9; margin-bottom: 50px; margin-top: 50px; }
 footer {
   background-color: #2C3E50;
   color:  #fff;
-  font-size: 1.5em;
+  font-size: 23px;
   text-align: center;
   padding:3%;
 }
@@ -276,3 +276,6 @@ hr.copyright
   height:60%;
   border-left:2px solid white;
   float: center;
+
+
+  
