--- a/style.css
+++ b/style.css
@@ -115,6 +115,27 @@ hr.divider {
   margin : 50px
 }
 
+.pt-100{
+  padding-top: 100px
+}
+
+.pt-50{
+  padding-top: 50px;
+}
+
+.pt-25{
+  padding-top: 25px
+}
+
+.dark-text{
+  color: #4e413b
+}
+
+.left-v-line{
+  border-left: 1px solid #857671;
+  height: 500px;
+}
+
 @import url(https://fonts.googleapis.com/css?family=Merriweather);
 *,
 *:before,
