--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body{
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #14213d;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -172,6 +172,23 @@ form input, form textarea {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   resize: none;
 }
+form .contact input{
+  border: 0;
+  outline: 0;
+  padding: 1em;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 25px;
+  display: block;
+  width: 60%;
+  margin-top: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  resize: none;
+
+}
 form input:focus, form textarea:focus {
   -moz-box-shadow: 0 0px 2px #E07A5F !important;
   -webkit-box-shadow: 0 0px 2px #E07A5F !important;
@@ -204,7 +221,10 @@ textarea::-webkit-input-placeholder {
   width: 48%;
   margin-bottom: 1em;
 }
+.contact {
+  width:60%;
 
+}
 .right {
   width: 50%;
 }
@@ -282,7 +302,7 @@ a.social-button {
 	margin: 5px;
 }
 
-a.link-facebook,a.link-twitter,a.link-codepen,a.link-linkedin,a.link-instagram
+a.link-facebook,a.link-twitter,a.link-codepen,a.link-linkedin,a.link-instagram,a.link-cutlery
 {
   transition:0.4s ease;
 }
@@ -301,6 +321,10 @@ a.link-linkedin
 a.link-instagram
 {
   color:#e95950;
+}
+a.link-cutlery
+{
+  color:#e0ab41;
 }
 a.link-facebook:hover{
 	background-color: #3b5998;
@@ -324,6 +348,10 @@ a.link-linkedin:hover{
 a.link-instagram:hover{
 	background-color: #e95950;
 	color: #fff;
+}
+a.link-cutlery:hover{
+  background-color: #e0ab41;
+  color: #fff;
 }
 
 .btn-default {
